Corrects padding on small display

--- a/static/stylesheet/style.less
+++ b/static/stylesheet/style.less
@@ -473,6 +473,16 @@ ul.social {
   height: 70px;
   margin-left: 5%;
 }
+//
+//small phones
+//
+
+@media (max-width: 480px) {
+main{
+    article {
+        margin: 0 6% 2% 6%;
+    }
+}
 
 //
 // Desktop
